# knowledge-harvest-from-lms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
knowledge_harvest_from_lms/: __init__.py  main.py  present_result.py  search_prompts.py
knowledge_harvest_from_lms/data_utils/: __init__.py  data_utils.py
knowledge_harvest_from_lms/harvester/: __init__.py  entity_tuple_searcher.py  knowledge_harvester.py  language_model_wrapper.py
knowledge_harvest_from_lms/models/: __init__.py  gpt3.py  ollama_model.py
knowledge_harvest_from_lms/relation_info/: conceptnet.json  ekar_aggr.json  human.json  lama.json
knowledge_harvest_from_lms/results/conceptnet/1000tuples_top20prompts/roberta-large/AtLocation/: ent_tuples.json  prompts.json
knowledge_harvest_from_lms/results/conceptnet/1000tuples_top20prompts/roberta-large/CapableOf/: ent_tuples.json  prompts.json
knowledge_harvest_from_lms/results/conceptnet/1000tuples_top20prompts/roberta-large/Causes/: ent_tuples.json  prompts.json
knowledge_harvest_from_lms/results/conceptnet/1000tuples_top20prompts/roberta-large/CausesDesire/: ent_tuples.json  prompts.json
knowledge_harvest_from_lms/results/conceptnet/1000tuples_top20prompts/roberta-large/CreatedBy/: ent_tuples.json  prompts.json
knowledge_harvest_from_lms/results/human/1000tuples_top20prompts/roberta-large/: summary.txt
knowledge_harvest_from_lms/results/lama/1000tuples_top20prompts/roberta-large/: summary.txt
tests/: test_LLMResponse.py
(+1275 files in other folders)
